style(样式): 使用主题，修改样式

--- a/layout/_widget/group.ejs
+++ b/layout/_widget/group.ejs
@@ -2,14 +2,14 @@
 if (page.layout == 'page' || page.layout == 'docs' || page.layout == 'post') {
   var rows = new Array();
   site.posts.each(function(p){
-    if (p.path && (p.group == item.id)) {
+    if (p.path && (p.group == item.id && p.layout != 'list')) {
       if ((p.short_title != false || (p.short_title == undefined && p.title))) {
         rows.push({name: p.short_title || p.title, url: p.path, order: (p.order || 0)})
       }
     }
   })
   site.pages.each(function(p){
-    if (p.path && (p.group == item.id)) {
+    if (p.path && (p.group == item.id && p.layout != 'list')) {
       if ((p.short_title != false || (p.short_title == undefined && p.title))) {
         rows.push({name: p.short_title || p.title, url: p.path, order: (p.order || 0)})
       }
