--- a/layout/_meta/counter.ejs
+++ b/layout/_meta/counter.ejs
@@ -26,31 +26,29 @@
 <% if (!!page.comments && checkComment) { %>
 <div class="new-meta-item browse">
   <a class='notlink'>
-    <p>
-      <i class="<%- theme.article.body.meta_library.counter.icon %> fa-fw" aria-hidden="true"></i>
-      <% if (theme.comments.service=='waline' && theme.comments.waline.pageview) { %>
-      <span data-path="<%- url_for(path) %>" class="waline-pageview-count">
-        <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-      </span>
-      <% } else if (theme.comments.service=='twikoo' && theme.comments.twikoo.visitor) { %>
-      <span id="twikoo_visitors">
-        <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-      </span>
-      <% } else if (theme.comments.service=='discuss' && theme.comments.discuss.visitStat) { %>
-      <span id="Discuss-Visitors">
-        <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-      </span>
-      <% } else if (theme.comments.service=='artalk' && theme.comments.artalk.visitor) { %>
-      <span id="artalk_visitors" data-page-key="<%- url_for(path) %>">
-        <i class="fa-light fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-      </span>
-      <% } else if (theme.plugins.busuanzi.enable) { %>
-      <span id="busuanzi_value_page_pv">
-        <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-      </span>
-      <% } %>  
-      <span><%- theme.article.body.meta_library.counter.unit %></span>
-    </p>
+    <i class="<%- theme.article.body.meta_library.counter.icon %> fa-fw" aria-hidden="true"></i>
+    <% if (theme.comments.service=='waline' && theme.comments.waline.pageview) { %>
+    <span data-path="<%- url_for(path) %>" class="waline-pageview-count">
+      <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+    </span>
+    <% } else if (theme.comments.service=='twikoo' && theme.comments.twikoo.visitor) { %>
+    <span id="twikoo_visitors">
+      <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+    </span>
+    <% } else if (theme.comments.service=='discuss' && theme.comments.discuss.visitStat) { %>
+    <span id="Discuss-Visitors">
+      <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+    </span>
+    <% } else if (theme.comments.service=='artalk' && theme.comments.artalk.visitor) { %>
+    <span id="artalk_visitors" data-page-key="<%- url_for(path) %>">
+      <i class="fa-light fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+    </span>
+    <% } else if (theme.plugins.busuanzi.enable) { %>
+    <span id="busuanzi_value_page_pv">
+      <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+    </span>
+    <% } %>  
+    <p><%- theme.article.body.meta_library.counter.unit %></p>
   </a>
 </div>
 <% } %>
