--- a/source/css/_style/_layout/main.styl
+++ b/source/css/_style/_layout/main.styl
@@ -170,6 +170,7 @@
         &,p,i
           font-size: $fontsize-code
         .new-meta-item
+          margin-left: 20px;
           color: var(--color-meta)
           .notlink
             cursor: default
@@ -180,14 +181,14 @@
           display: flex
           align-items: baseline
           justify-content: center
-          margin: 0 $gap 0 0
+          margin: 0 $gap * 2 0 0
           padding: 8px 0  // seo https://web.dev/tap-targets/
           &:last-child
             margin-right: 0
           img,i
             display: inline-block
           i
-            margin-right: 4px
+            margin-right: 6px
             border-radius: 0
             &.fa-hashtag
               margin-right: 2px
@@ -197,13 +198,17 @@
           a
             display: flex
             justify-content: center
-            align-items: center
+            align-items: inherit
             img
               height: 16px
               width: 16px
               margin-right: 8px // seo https://web.dev/tap-targets/
             p
               margin: 0
+              font-weight: normal
+              trans()
+            span
+              margin-right: 6px
               font-weight: normal
               trans()
             &:hover
@@ -215,7 +220,7 @@
           img,i
             border-radius: 100%
           img
-            transform: translateY(-0.5px)
+            transform: translateY(2.5px)
 
         @media screen and (max-width: $device-mobile)
           .share
