--- a/source/css/_style/_tag-plugins/friends.styl
+++ b/source/css/_style/_tag-plugins/friends.styl
@@ -1,5 +1,4 @@
 .users-wrap
-  overflow: hidden
   .group-header
     margin: 0 0 1rem
     p
@@ -10,9 +9,6 @@
         font-weight: 500
   .group-body
     width: 100%
-    display: flex
-    flex-wrap: wrap
-    align-items: stretch
     margin-bottom: 2rem
   .friendsjs-wrap
     display: block
@@ -21,52 +17,71 @@
       margin: 2rem 0
       text-align: center
 
-.users-wrap .user-card
-  flex-shrink: 1
-  display: flex
-  align-items: stretch
-  width: 12.5%
-  @media screen and (max-width: 980px)
-    width: 14.28%
+.users-wrap .group-body
+  display: grid
+  grid-gap: 1rem 1rem
+  grid-template-columns: repeat(auto-fill, "calc((100% - 3 * %s) / 4)" % 1rem)
+  @media screen and (max-width: $device-laptop)
+    grid-template-columns: repeat(auto-fill, "calc((100% - 2 * %s) / 3)" % 1rem)
   @media screen and (max-width: 900px)
-    width: 16.66%
-  @media screen and (max-width: 820px)
-    width: 20%
+    grid-template-columns: repeat(auto-fill, "calc((100% - 1 * %s) / 2)" % 1rem)
   @media screen and (max-width: $device-tablet)
-    width: 16.66%
+    grid-template-columns: repeat(auto-fill, "calc((100% - 2 * %s) / 3)" % 1rem)
   @media screen and (max-width: $device-mobile)
-    width: 25%
-  .card-link
-    margin: 0
+    grid-template-columns: repeat(auto-fill, "calc((100% - 1 * %s) / 2)" % 1rem)
+  margin-bottom: 2rem
+
+.users-wrap .group-body .users-card .card-link
+  width: 100%
+  display: flex
+  flex-direction: column
+  >img
     width: 100%
-    color: var(--text-p1)
-    font-size: 10px
-    font-weight: 500
-    display: flex
-    justify-content: flex-start
-    flex-direction: column
-    align-items: center
-    text-align: center
-    line-height: 1.2
+    height 120px
     border-radius: 4px
-    overflow: hidden
-    position: relative
-    padding: 1rem 0.5rem
-    img
-      object-fit: cover
+    @media screen and (max-width: $device-laptop)
+      height: 150px
+    @media screen and (max-width: 900px)
+      height: 180px
+    @media screen and (max-width: $device-tablet)
+      height: 150px
+    object-fit: cover
+    box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.2)
+  .info
+    margin-top: 0.5rem
+    line-height: 1.2
+    >img
+      width: 28px
+      height: @width
+      border-radius: @width
+      float: left
+      margin-right: 8px
+      margin-top: 2px
+    span
       display: block
-      width: 48px
-      height: 48px
-      background: var(--card)
-      border-radius: 64px
-      margin: 0 0 0.5rem
+    .title
+      font-weight: 500
+      color: var(--text-p1)
+      font-size: $fs-14
+      margin-top: 1px
+      display: -webkit-box
+      -webkit-box-orient: vertical
+      overflow: hidden
+      -webkit-line-clamp: 1
+    .desc
+      font-size: 10px
+      margin-top: 2px
+      word-wrap: break-word
+      color: var(--text-p3)
+      display: -webkit-box
+      -webkit-box-orient: vertical
+      overflow: hidden
+      -webkit-line-clamp: 2
 
 // transform
-.users-wrap .user-card .card-link
+.users-wrap .users-card .card-link
   >img
-    trans2 transform box-shadow
+    trans()
   &:hover
-    background: var(--block-hover)
-    img
-      transform: scale(1.2) rotate(8deg)
-      box-shadow: $boxshadow-card-float
+    >img
+      box-shadow: $boxshadow-float, $boxshadow-card-float
