fix(评论): 修改Waline评论显示效果

--- a/layout/_meta/artalkcount.ejs
+++ b/layout/_meta/artalkcount.ejs
@@ -1,5 +1,5 @@
 <% if (theme.comments.service == 'artalk' && page.comments !== false) { %> 
-  <div class="new-meta-item comments-count"> 
+  <div class="new-meta-item comment"> 
     <% 
       let commentPath;
       let path = post.path || page.path;
@@ -15,16 +15,14 @@
       if(commentPath) path = commentPath;
       path = path.replaceAll('/index.html', '/').replaceAll('.html', '')
     %> 
-    <a href="<%- url_for(path) %>#comments"> 
+    <a class="notlink" href="<%- url_for(path) %>#comments"> 
       <i class="<%- theme.article.body.meta_library.artalkcount.icon %> fa-fw"></i> 
-      <p> 
-        <span data-page-key="<%- url_for(path) %>" id="ArtalkCount"> 
-          <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
-        </span> 
-        <% if(theme.article.body.meta_library.artalkcount.desc) { %> 
-          <span class="leancloud-comments-count">&nbsp;<%- theme.article.body.meta_library.artalkcount.desc %></span> 
-        <% } %> 
-      </p>       
+      <span data-page-key="<%- url_for(path) %>" id="ArtalkCount"> 
+        <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
+      </span> 
+      <% if(theme.article.body.meta_library.artalkcount.desc) { %> 
+        <p><%- theme.article.body.meta_library.artalkcount.desc %></p> 
+      <% } %> 
     </a> 
   </div> 
 <% } %> 
