--- a/layout/_meta/counter.ejs
+++ b/layout/_meta/counter.ejs
@@ -3,7 +3,7 @@
   let commentPath;
   if (theme.comments.service && theme.comments.service.length > 0) {
     let service = theme.comments.service;
-    if (page.comments == undefined || page.comments != false) {
+    if (page.comments == undefined || page.comments !== false) {
       if (service in page && page[service].path) {
         commentPath = page[service].path;
       }
@@ -15,9 +15,9 @@
 
   let checkComment = false;
   if (theme.plugins.busuanzi.enable
-    || (theme.comments.service=='waline' && theme.comments.waline.pageview)
+    || (theme.comments.service=='waline' && theme.comments.waline.visitor)
     || (theme.comments.service=='twikoo' && theme.comments.twikoo.visitor)
-    || (theme.comments.service=='discuss' && theme.comments.discuss.visitStat)
+    || (theme.comments.service=='discuss' && theme.comments.discuss.visitor)
     || (theme.comments.service=='artalk' && theme.comments.artalk.visitor)) {
     checkComment = !checkComment;
   } 
@@ -27,7 +27,7 @@
 <div class="new-meta-item browse">
   <a class='notlink'>
     <i class="<%- theme.article.body.meta_library.counter.icon %> fa-fw" aria-hidden="true"></i>
-    <% if (theme.comments.service=='waline' && theme.comments.waline.pageview) { %>
+    <% if (theme.comments.service=='waline' && theme.comments.waline.visitor) { %>
     <span data-path="<%- url_for(path) %>" class="waline-pageview-count">
       <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
     </span>
@@ -35,7 +35,7 @@
     <span id="twikoo_visitors">
       <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
     </span>
-    <% } else if (theme.comments.service=='discuss' && theme.comments.discuss.visitStat) { %>
+    <% } else if (theme.comments.service=='discuss' && theme.comments.discuss.visitor) { %>
     <span id="Discuss-Visitors">
       <i class="fa-solid fa-loader fa-spin fa-fw" aria-hidden="true"></i>
     </span>
