--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,4 +1,10 @@
 <%- partial('_pre') %>
+<%
+page.comments = false;
+if (!page.robots) {
+  page.robots = 'noindex,follow';
+}
+%>
 <div id="l_main" class='<%- page.sidebar == false ? ' no_sidebar' : '' %>'>
 	<% if (page.year || page.month) { %>
 		<%- partial('_partial/archive') %>
